--- a/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
+++ b/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
@@ -5,7 +5,6 @@
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
 		<title>History of Vulnerabilities</title>
 		<script src='https://cdn.tailwindcss.com'></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
@@ -34,14 +33,14 @@
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
 			<div class="relative max-w-4xl mx-auto mt-40">
 				<h4 class="text-6xl font-medium">History of Computer Vulnerabilities</h4>
-                <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="#initial">Initial Discovery </a><p> | </p>
-                    <a href="#common">Common Early Exploits and Attacks</a><p> | </p>
+                <div class="flex block items-center md:space-x-4 mt-4 justify-center">
+                    <a href="#initial">Initial Discovery </a>
+                    <a href="#common">Common Early Exploits and Attacks</a>
                     <a href="#development">The Development of Security Patching</a>
                 </div>
 			</div>
 		</div>
-		<div class="bg-gradient-to-b from-black to-[#141528] pt-24 space-y-6 px-2">
+		<div class="bg-gradient-to-b from-black to-[#141528] pt-4 space-y-6 px-2">
             <div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4 my-5">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]" id="initial">The Initial Discovery of Software Vulnerabilities</h4>
@@ -55,49 +54,40 @@
                         Common Early Exploits and Attacks
                     </h4>
 
-                    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-stretch">
-                        <div class="flex flex-col h-[450px] p-5 bg-[#141528] border border-indigo-900/50 rounded">
-                            <div class="overflow-auto flex-grow space-y-4 pr-2">
+                    <div class="grid grid-cols-1 gap-4">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">Phishing</h6>
-                            <p class="text-gray-200 text-sm text-justify">
-                                Phishing attacks began in the mid-1990s, with attackers impersonating AOL employees to steal user credentials via email (Fette, 2020). These early phishing attacks exploited social engineering tactics, tricking users into entering personal information on fraudulent websites (Fette, 2020). AOL introduced anti-phishing measures in 1995 to counter the rising threat, although phishing attacks continue to evolve (Fette, 2020).
-                            </p>
-                            </div>
-                            <div class="mt-4">
-                            <button class=" bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
-                                Learn More
-                            </button>
+                            <div>
+                                <p>Phishing attacks began in the mid-1990s, with attackers impersonating AOL employees to steal user credentials via email (Fette, 2020). These early phishing attacks exploited social engineering tactics, tricking users into entering personal information on fraudulent websites (Fette, 2020). AOL introduced anti-phishing measures in 1995 to counter the rising threat, although phishing attacks continue to evolve (Fette, 2020).</p>
+                                <div class="mt-2">
+                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="flex flex-col h-[450px] p-5 bg-[#141528] border border-indigo-900/50 rounded">
-                            <div class="overflow-auto flex-grow space-y-4 pr-2">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">Ransomware</h6>
-                            <p class="text-gray-200 text-sm text-justify">
-                                Ransomware first emerged in 1989 with the AIDS Trojan, also known as PS Cyborg, which encrypted files on infected systems and demanded payment to a P.O. box (Popp, 1989). The AIDS Trojan, distributed on floppy disks at a World Health Organization conference, was one of the first known attempts to extort victims through ransomware (Popp, 1989). Since then, ransomware has evolved significantly, with more sophisticated versions using encryption to lock files and demand cryptocurrency payments (Varonis, 2021).
-                            </p>
-                            </div>
-                            <div class="mt-4">
-                            <button class=" bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
-                                Learn More
-                            </button>
+                            <div>
+                                <p>Ransomware first emerged in 1989 with the AIDS Trojan, also known as PS Cyborg, which encrypted files on infected systems and demanded payment to a P.O. box (Popp, 1989). The AIDS Trojan, distributed on floppy disks at a World Health Organization conference, was one of the first known attempts to extort victims through ransomware (Popp, 1989). Since then, ransomware has evolved significantly, with more sophisticated versions using encryption to lock files and demand cryptocurrency payments (Varonis, 2021).</p>
+                                <div class="mt-2">
+                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                </div>
                             </div>
                         </div>
 
-                        <div class="flex flex-col h-[450px] p-5 bg-[#141528] border border-indigo-900/50 rounded">
-                            <div class="overflow-auto flex-grow space-y-4 pr-2">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">SQL Injection</h6>
-                            <p class="text-gray-200 text-sm text-justify">
-                                SQL Injection attacks were first recognized in the late 1990s as a significant web application security vulnerability (Halfond, 2006). These attacks involve injecting malicious SQL queries into input fields to manipulate or extract data from databases (Halfond, 2006). Despite the recognition of the vulnerability, SQL Injection remains one of the most prevalent attacks in web application security (OWASP, 2021).
-                            </p>
-                            </div>
-                            <div class="mt-4">
-                            <button class=" bg-indigo-600 text-white text-sm px-4 py-2 rounded-md hover:bg-indigo-500 transition">
-                                Learn More
-                            </button>
+                            <div>
+                                <p>SQL Injection attacks were first recognized in the late 1990s as a significant web application security vulnerability (Halfond, 2006). These attacks involve injecting malicious SQL queries into input fields to manipulate or extract data from databases (Halfond, 2006). Despite the recognition of the vulnerability, SQL Injection remains one of the most prevalent attacks in web application security (OWASP, 2021).</p>
+                                <div class="mt-2">
+                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                </div>
                             </div>
                         </div>
+
                     </div>
+
+                    
 
                 </div>
 
@@ -113,7 +103,7 @@
                 </div>
 
                 <div>
-                    <details class="rounded border shadow" open>
+                    <details class="rounded border shadow border-indigo-900" open>
                         <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                         References
                         </summary>
@@ -122,7 +112,6 @@
                             <li>Fette, I. (2020). The History of Phishing Attacks and Their Evolution. Phishing.org. https://www.phishing.org/history-of-phishing</li>
                             <li>Gueye, A., & Mell, P. (2021). A Historical and Statistical Study of the Software Vulnerability Landscape. The Seventh International Conference on Advances and Trends in Software Engineering (SOFTENG 2021). https://www.nist.gov/publications/historical-and-statistical-study-software-vulnerability-landscape</li>
                             <li>OWASP. (2021). SQL Injection. OWASP Foundation. https://owasp.org/www-community/attacks/SQL_Injection</li>
-                            <li>Woo, S., Lee, D., Park, S., Lee, H., & Dietrich, S. (2021). V0Finder: Discovering the Correct Origin of Publicly Reported Software Vulnerabilities. 30th USENIX Security Symposium (USENIX Security 21). https://www.usenix.org/conference/usenixsecurity21/presentation/woo</li>
                             <li>Varonis. (2021). A Brief History of Ransomware. https://www.varonis.com/blog/a-brief-history-of-ransomware</li>
 
                         </ul>
