--- a/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
+++ b/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
@@ -55,32 +55,32 @@
                     </h4>
 
                     <div class="grid grid-cols-1 gap-4">
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">Phishing</h6>
                             <div>
                                 <p>Phishing attacks began in the mid-1990s, with attackers impersonating AOL employees to steal user credentials via email (Fette, 2020). These early phishing attacks exploited social engineering tactics, tricking users into entering personal information on fraudulent websites (Fette, 2020). AOL introduced anti-phishing measures in 1995 to counter the rising threat, although phishing attacks continue to evolve (Fette, 2020).</p>
                                 <div class="mt-2">
-                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                    <a href="../types-of-vulnerabilities/phishing.html" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">Ransomware</h6>
                             <div>
                                 <p>Ransomware first emerged in 1989 with the AIDS Trojan, also known as PS Cyborg, which encrypted files on infected systems and demanded payment to a P.O. box (Popp, 1989). The AIDS Trojan, distributed on floppy disks at a World Health Organization conference, was one of the first known attempts to extort victims through ransomware (Popp, 1989). Since then, ransomware has evolved significantly, with more sophisticated versions using encryption to lock files and demand cryptocurrency payments (Varonis, 2021).</p>
                                 <div class="mt-2">
-                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                    <a href="../types-of-vulnerabilities/ransomware.html" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">SQL Injection</h6>
                             <div>
                                 <p>SQL Injection attacks were first recognized in the late 1990s as a significant web application security vulnerability (Halfond, 2006). These attacks involve injecting malicious SQL queries into input fields to manipulate or extract data from databases (Halfond, 2006). Despite the recognition of the vulnerability, SQL Injection remains one of the most prevalent attacks in web application security (OWASP, 2021).</p>
                                 <div class="mt-2">
-                                    <a href="#" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
+                                    <a href="../types-of-vulnerabilities/sql-injection.html" class="text-white bg-indigo-600 hover:bg-indigo-700 ease duration-200 px-2 py-1 rounded">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -126,9 +126,8 @@
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
 		
-
 		<footer class="text-white w-full p-4 pt-24 bg-[#141528]">
-            <div class="max-w-7xl mx-auto border p-6 bg-[#141538]/80 border-indigo-900/50 rounded md:flex block justify-between">
+            <div class="max-w-6xl mx-auto border p-6 bg-[#141538]/80 border-indigo-900/50 rounded md:flex block justify-between">
                 <div>
                     <div class="flex items-center space-x-4">
                         <img src="../assets/logo.png" class="h-10 w-10" alt="Logo" />
@@ -140,28 +139,31 @@
                     <div>
                         <h4 class="font-medium">Quick Links</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="../index.html">Home</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../recent-attacks.html">Recent News</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../concepts-of-cybersecurity.html">Learn Now</a></li>
+                            <li class="text-gray-300 text-sm"><a href="../about-us.html">About Us</a></li>
+                            <li class="text-gray-300 text-sm"><a href="#">Contact Us</a></li>
                         </ul>
                     </div>
                     <div>
-                        <h4 class="font-medium">Quick Links</h4>
+                        <h4 class="font-medium">Members</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="https://elaborate-paprenjak-b3b1e1.netlify.app/">Cuenco, John Louie</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://biybow.github.io/purtfoillio/portfolio.html">Laugo, Cyril Marius</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://ltshmarciano.github.io/Personal-Website/">Marciano, Latisha***</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://sylvie7503.github.io/LandingPage/home.html">Moya, Patrick Christopher</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://freakest.github.io/janart.github.io/LandingPage/index.html">Pagaduan, Jan Art</a></li>
                         </ul>
                     </div>
                     <div>
-                        <h4 class="font-medium">Quick Links</h4>
+                        <h4 class="font-medium">Members</h4>
                         <ul class="mt-2">
-                            <li class="text-gray-300 text-sm">Page 1</li>
-                            <li class="text-gray-300 text-sm">Page 2</li>
-                            <li class="text-gray-300 text-sm">Page 3</li>
-                            <li class="text-gray-300 text-sm">Page 4</li>
+                            <li class="text-gray-300 text-sm"><a href="https://je-sp.github.io/jesshub/index.html">Paguel, Jess Patrick</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://joaquinpangilinan.github.io/MPortfolio/">Pangilinan, Myles</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://edwardallen-ricafranca.github.io/TheTarnishEd/">Ricafranca, Edward Allen</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://cyieie.github.io/MTerm-Project/index.html">Songodanan, Cyrus</a></li>
+                            <li class="text-gray-300 text-sm"><a href="https://tadiyusss.github.io/integrative-portfolio/">Toledo, Thaddeus</a></li>
                         </ul>
                     </div>
                 </div>
