update: hero pictures, hover animation, added accordion | still no working footer, go top, breadcrumb, and sidebar

--- a/types-of-vulnerabilities/man-in-the-middle-attacks.html
+++ b/types-of-vulnerabilities/man-in-the-middle-attacks.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Tailwind</title>
+		<title>Man-in-the-Middle Attack</title>
 		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/MIT.webp')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/types-of-vulnerabilities-hero/mit.jpg')] bg-cover bg-center bg-no-repeat relative">
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -401,6 +401,20 @@
                 </p>
             </div>
         </div>
+        </div>
+        <!-- REFERENCES ACCORDION -->
+        <div>
+            <details class="rounded border shadow" open>
+                <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                References
+                </summary>
+                <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                <ul class="list-disc list-inside space-y-1">
+                    <li>APA Format Here</li>
+                    <li>APA Format Here</li>
+                </ul>
+                </div>
+            </details>
         </div>
       </div>
     </div>
