--- a/types-of-vulnerabilities/phishing.html
+++ b/types-of-vulnerabilities/phishing.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Tailwind</title>
+		<title>Phishing</title>
 		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/phis.webp')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/types-of-vulnerabilities-hero/phis.jpg')] bg-cover bg-center bg-no-repeat relative">
 			<nav class="absolute inset-0 z-10">
 				<div class="w-full p-4 flex items-center justify-between">
 					<div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -276,9 +276,10 @@
 			<div class="relative max-w-4xl mx-auto mt-48">
 				<h4 class="text-6xl font-medium">Phishing</h4>
 				<div class="flex items-center space-x-4 mt-4 justify-center">
-					<a href="">Emergance of Hacking </a>
-					<a href="">Milesstone Incidents</a>
-					<a href="">Cybercrime in Digital Age</a>
+					<a href="#overview">Overview</a>
+                    <a href="#how-it-works">How it Works</a>
+                    <a href="#example">Real World Examples</a>
+                    <a href="#risk-impact">Risks and Impacts</a>
 				</div>
 			</div>
 		</div>
@@ -353,6 +354,21 @@
 							<p>Phishing attacks have the ability to stop an organization's operations by removing important files or installing ransomware. Delays in service affect the company as well as its customers and partners. Reduced productivity, lost revenue, and strained business ties are the outcomes of operational downtime. Multi-layered security systems and employee training are examples of preventative measures that are essential defenses.</p>
 						</div>
 					</div>
+				</div>
+
+				<!-- REFERENCES ACCORDION -->
+				<div>
+					<details class="rounded border shadow" open>
+						<summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+						References
+						</summary>
+						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+						<ul class="list-disc list-inside space-y-1">
+							<li>APA Format Here</li>
+							<li>APA Format Here</li>
+						</ul>
+						</div>
+					</details>
 				</div>
 			</div>
 		</div>
