--- a/types-of-vulnerabilities/privilege-escalation.html
+++ b/types-of-vulnerabilities/privilege-escalation.html
@@ -3,13 +3,13 @@
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width, initial-scale=1'>
-		<title>Tailwind</title>
+		<title>Privilege Escalation</title>
 		<script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 		<link rel="stylesheet" href="../assets/css/fonts.css">
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/esca.jpg')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/types-of-vulnerabilities-hero/esca.jpg')] bg-cover bg-center bg-no-repeat relative">
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -290,9 +290,10 @@
 			<div class="relative max-w-4xl mx-auto mt-48">
 				<h4 class="text-6xl font-medium">Privilege Escalation</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="">Emergance of Hacking </a>
-                    <a href="">Milesstone Incidents</a>
-                    <a href="">Cybercrime in Digital Age</a>
+                    <a href="#overview">Overview</a>
+                    <a href="#how-it-works">How it Works</a>
+                    <a href="#example">Real World Examples</a>
+                    <a href="#risk-impact">Risks and Impacts</a>
                 </div>
 			</div>
 		</div>
@@ -397,6 +398,20 @@
                 </div>
             </div>
         </div>
+            <!-- REFERENCES ACCORDION -->
+            <div>
+                <details class="rounded border shadow" open>
+                    <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
+                    References
+                    </summary>
+                    <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
+                    <ul class="list-disc list-inside space-y-1">
+                        <li>APA Format Here</li>
+                        <li>APA Format Here</li>
+                    </ul>
+                    </div>
+                </details>
+            </div>
       </div>
     </div>
     
