added content: all subtopics under types-of-vulnerabilities with contents

--- a/types-of-vulnerabilities/cross-site-scripting.html
+++ b/types-of-vulnerabilities/cross-site-scripting.html
@@ -406,8 +406,8 @@
                 </summary>
                 <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                 <ul class="list-disc list-inside space-y-1">
-                    <li>APA Format Here</li>
-                    <li>APA Format Here</li>
+                    <li>What is reflected XSS (cross-site scripting)? Tutorial & Examples | Web Security Academy. (n.d.). https://portswigger.net/web-security/cross-site-scripting/reflected</li>
+                    <li>Exploiting cross-site scripting vulnerabilities | Web Security Academy. (n.d.). https://portswigger.net/web-security/cross-site-scripting/exploiting</li>
                 </ul>
                 </div>
             </details>
