--- a/types-of-vulnerabilities/denial-of-service.html
+++ b/types-of-vulnerabilities/denial-of-service.html
@@ -363,8 +363,8 @@
 						</summary>
 						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
 						<ul class="list-disc list-inside space-y-1">
-							<li>APA Format Here</li>
-							<li>APA Format Here</li>
+							<li>What is a DDoS Attack? DDoS Meaning, Definition & Types | Fortinet. (n.d.). Fortinet. https://www.fortinet.com/resources/cyberglossary/ddos-attack</li>
+							<li>Habte, F. (2022, May 11). What is DDoS Attack? Check Point Software. https://www.checkpoint.com/cyber-hub/cyber-security/what-is-ddos/</li>
 						</ul>
 						</div>
 					</details>
