--- a/types-of-vulnerabilities/insider-threat.html
+++ b/types-of-vulnerabilities/insider-threat.html
@@ -406,8 +406,8 @@
                 </summary>
                 <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                 <ul class="list-disc list-inside space-y-1">
-                    <li>APA Format Here</li>
-                    <li>APA Format Here</li>
+                    <li>Defining insider threats | CISA. (n.d.). Cybersecurity and Infrastructure Security Agency CISA. https://www.cisa.gov/topics/physical-security/insider-threat-mitigation/defining-insider-threats</li>
+                    <li>What is an insider threat? Definition, types, and prevention | Fortinet. (n.d.). Fortinet. https://www.fortinet.com/resources/cyberglossary/insider-threats</li>
                 </ul>
                 </div>
             </details>
