--- a/types-of-vulnerabilities/man-in-the-middle-attacks.html
+++ b/types-of-vulnerabilities/man-in-the-middle-attacks.html
@@ -410,8 +410,8 @@
                 </summary>
                 <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                 <ul class="list-disc list-inside space-y-1">
-                    <li>APA Format Here</li>
-                    <li>APA Format Here</li>
+                    <li>Yasar, K., & Cobb, M. (2022, April 28). man-in-the-middle attack (MitM). Search IoT. https://www.techtarget.com/iotagenda/definition/man-in-the-middle-attack-MitM/li>
+                    <li>Yerushalmi, S. (2023, December 21). What is MITM (Man in the Middle) Attack | Imperva. Learning Center. https://www.imperva.com/learn/application-security/man-in-the-middle-attack-mitm/</li>
                 </ul>
                 </div>
             </details>
