--- a/types-of-vulnerabilities/phishing.html
+++ b/types-of-vulnerabilities/phishing.html
@@ -364,8 +364,9 @@
 						</summary>
 						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
 						<ul class="list-disc list-inside space-y-1">
-							<li>APA Format Here</li>
-							<li>APA Format Here</li>
+							<li>Young, K. (2021, November 8). Cyber case Study: Sony Pictures Entertainment Hack. CoverLink Insurance - Ohio Insurance Agency. https://coverlink.com/case-study/sony-pictures-entertainment-hack/</li>
+							<li>Huddleston, T., Jr. (2019, March 27). How this scammer used phishing emails to steal over $100 million from Google and Facebook. CNBC. https://www.cnbc.com/2019/03/27/phishing-email-scam-stole-100-million-from-facebook-and-google.html</li>
+							<li>What is phishing? - meaning, attack types & more | ProofPoint US. (2025b, April 18). Proofpoint. https://www.proofpoint.com/us/threat-reference/phishing</li>
 						</ul>
 						</div>
 					</details>
