--- a/types-of-vulnerabilities/privilege-escalation.html
+++ b/types-of-vulnerabilities/privilege-escalation.html
@@ -406,8 +406,8 @@
                     </summary>
                     <div class="px-4 py-2 bg-[#141528] border border-indigo-900">
                     <ul class="list-disc list-inside space-y-1">
-                        <li>APA Format Here</li>
-                        <li>APA Format Here</li>
+                        <li>Tubin, G. (2025, January 2). Understanding privilege escalation and 5 common attack techniques. All-in-One Cybersecurity Platform - Cynet. https://www.cynet.com/network-attacks/privilege-escalation//li>
+                        <li>What is privilege escalation? - Definition, types, examples | ProofPoint US. (2025, March 6). Proofpoint. https://www.proofpoint.com/us/threat-reference/privilege-escalation</li>
                     </ul>
                     </div>
                 </details>
