--- a/types-of-vulnerabilities/ransomware.html
+++ b/types-of-vulnerabilities/ransomware.html
@@ -363,8 +363,8 @@
 						</summary>
 						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
 						<ul class="list-disc list-inside space-y-1">
-							<li>APA Format Here</li>
-							<li>APA Format Here</li>
+							<li>What is ransomware? | Trellix. (n.d.-b). Trellix. https://www.trellix.com/fr-fr/security-awareness/ransomware/what-is-ransomware/</li>
+							<li>Decoding the DNA of ransomware attacks: Unveiling the anatomy behind the threat. (n.d.). Trellix. https://www.trellix.com/blogs/research/decoding-the-dna-of-ransomware-attacks/</li>
 						</ul>
 						</div>
 					</details>
