--- a/types-of-vulnerabilities/software-bugs.html
+++ b/types-of-vulnerabilities/software-bugs.html
@@ -371,8 +371,8 @@
 						</summary>
 						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
 						<ul class="list-disc list-inside space-y-1">
-							<li>APA Format Here</li>
-							<li>APA Format Here</li>
+							<li>SonarSource. (2024c, April 11). software bugs: developer’s guide. Sonar. https://www.sonarsource.com/learn/software-bugs/</li>
+							<li>Balba, M. (2024, October 23). What is a software bug? | NinjaOne. NinjaOne. https://www.ninjaone.com/it-hub/endpoint-security/software-bug/</li>
 						</ul>
 						</div>
 					</details>
