--- a/types-of-vulnerabilities/sql-injection.html
+++ b/types-of-vulnerabilities/sql-injection.html
@@ -363,8 +363,9 @@
 						</summary>
 						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
 						<ul class="list-disc list-inside space-y-1">
-							<li>APA Format Here</li>
-							<li>APA Format Here</li>
+							<li>Zetter, K. (2016, May 11). Hacker lexicon: SQL injections, an everyday hacker’s favorite attack. WIRED. https://www.wired.com/2016/05/hacker-lexicon-sql-injections-everyday-hackers-favorite-attack/</li>
+							<li>What is SQL Injection? Tutorial & Examples | Web Security Academy. (n.d.-b). https://portswigger.net/web-security/sql-injection</li>
+							<li>SQL injection. (n.d.). PortSwigger. https://portswigger.net/burp/documentation/desktop/testing-workflow/input-validation/sql-injection</li>
 						</ul>
 						</div>
 					</details>
