--- a/types-of-vulnerabilities/insecure-direct-object-reference.html
+++ b/types-of-vulnerabilities/insecure-direct-object-reference.html
@@ -406,8 +406,8 @@
 						</summary>
 						<div class="px-4 py-2 bg-[#141528] border border-indigo-900">
 						<ul class="list-disc list-inside space-y-1">
-							<li>APA Format Here</li>
-							<li>APA Format Here</li>
+							<li>Insecure direct object references (IDOR) | Web Security Academy. (n.d.). https://portswigger.net/web-security/access-control/idor</li>
+							<li>Yerushalmi, S. (2024, January 8). Insecure Direct Object Reference (IDOR) | Best Practices | Imperva. Learning Center. https://www.imperva.com/learn/application-security/insecure-direct-object-reference-idor/</li>
 						</ul>
 						</div>
 					</details>
