--- a/famous-cyber-attacks/i-love-you-virus.html
+++ b/famous-cyber-attacks/i-love-you-virus.html
@@ -9,7 +9,7 @@
 	</head>
 	<body class="text-white text-roboto">
 		<!-- NAVIGATION -->
-		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/famous-cyber-attacks/iloveyou-virus.jpg')] bg-cover bg-center bg-no-repeat relative">
+		<div id="hero" class="w-full p-2 pb-72 text-center bg-[url('../assets/famous-cyber-attacks/i-love-you.jpg')] bg-cover bg-center bg-no-repeat relative">
             <nav class="absolute inset-0 z-10">
                 <div class="w-full p-4 flex items-center justify-between">
                     <div class="flex items-center space-x-4 md:w-auto w-full justify-between">
@@ -295,9 +295,9 @@
                 
 				<h4 class="text-6xl font-medium">I Love You Virus</h4>
                     <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Initial Discovery </a>
-                        <a href="">Common Early Exploits and Attacks</a>
-                        <a href="">The Development of Security Patching</a>
+                        <a href="">Overview </a>
+                        <a href="">Method of Attack</a>
+                        <a href="">Impact and Consequences</a>
                     </div>
 			</div>
 
@@ -318,20 +318,20 @@
                 <div class="space-y-4">
                     <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
                             <p>Government offices, including the Pentagon and British Parliament, were forced to shut down email systems. Critical communications were disrupted for days as a result of the virus. The operational downtime cost millions in lost productivity.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 2</h6>
                             <p>Corporations suffered major financial losses due to the need for extensive system cleaning and recovery. Many had to wipe and rebuild entire networks to ensure the worm was eradicated. This also led to unexpected budget increases for cybersecurity resources.
                             </p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 3</h6>
                             <p>The ILOVEYOU virus triggered a major public awareness campaign about email security. Users became more cautious about opening email attachments from unknown senders. It also pushed software companies to improve file-type handling and email scanning technologies.</p>
                         </div>
-                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2">
+                        <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 4</h6>
                             <p>The virus revealed serious gaps in international cybercrime law enforcement. Philippine authorities could not prosecute the creators initially due to the lack of applicable legislation. This spurred the development of new cybercrime laws globally.
                             </p>
