--- a/types-of-vulnerabilities/privilege-escalation.html
+++ b/types-of-vulnerabilities/privilege-escalation.html
@@ -400,7 +400,7 @@
         </div>
             <!-- REFERENCES ACCORDION -->
             <div>
-                <details class="rounded border shadow" open>
+                <details class="rounded border shadow border-indigo-900" open>
                     <summary class="cursor-pointer px-4 py-3 bg-[#141528] border border-indigo-900 rounded font-medium">
                     References
                     </summary>
