--- a/types-of-vulnerabilities/man-in-the-middle-attacks.html
+++ b/types-of-vulnerabilities/man-in-the-middle-attacks.html
@@ -287,12 +287,18 @@
             </nav>
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
-			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Man in the Middle Attack</h4>
+			<div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../types-of-vulnerability.html">Types of Vulnerabilities</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Man-in-The-Middle</a>
+                </div>
+				<h4 class="text-6xl font-medium text-center mt-30">Man-in-The-Middle</h4>
                 <div class="flex items-center space-x-4 mt-4 justify-center">
-                    <a href="">Emergance of Hacking </a>
-                    <a href="">Milesstone Incidents</a>
-                    <a href="">Cybercrime in Digital Age</a>
+                    <a href="#overview">Overview</a>
+                    <a href="#how-it-works">How it Works </a>
+                    <a href="#example">Real World Examples</a>
+                    <a href="#risk-impact">Risks and Impacts</a>
                 </div>
 			</div>
 		</div>
