--- a/types-of-vulnerabilities/phishing.html
+++ b/types-of-vulnerabilities/phishing.html
@@ -273,14 +273,19 @@
 				</div>
 			</nav>
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
-			<div class="relative max-w-4xl mx-auto mt-48">
-				<h4 class="text-6xl font-medium">Phishing</h4>
-				<div class="flex items-center space-x-4 mt-4 justify-center">
-					<a href="#overview">Overview</a>
-                    <a href="#how-it-works">How it Works</a>
+			<div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../types-of-vulnerability.html">Types of Vulnerabilities</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">Phishing</a>
+                </div>
+				<h4 class="text-6xl font-medium text-center mt-30">Phishing</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview</a>
+                    <a href="#how-it-works">How it Works </a>
                     <a href="#example">Real World Examples</a>
                     <a href="#risk-impact">Risks and Impacts</a>
-				</div>
+                </div>
 			</div>
 		</div>
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
