--- a/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
+++ b/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
@@ -31,8 +31,13 @@
             </nav>
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
-			<div class="relative max-w-4xl mx-auto mt-40">
-				<h4 class="text-6xl font-medium">History of Computer Vulnerabilities</h4>
+            <div class="relative max-w-6xl mx-auto text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../concepts-of-cybersecurity.html">Concepts of Cybersecurity</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">History of Computer Vulnerabilities</a>
+                </div>
+				<h4 class="text-6xl font-medium text-center mt-24">History of Computer Vulnerabilities</h4>
                 <div class="flex block items-center md:space-x-4 mt-4 justify-center">
                     <a href="#initial">Initial Discovery </a>
                     <a href="#common">Common Early Exploits and Attacks</a>
