--- a/famous-cyber-attacks/i-love-you-virus.html
+++ b/famous-cyber-attacks/i-love-you-virus.html
@@ -291,15 +291,21 @@
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent via-black/40 to-black"></div>
 
-            <div class="relative mt-48 max-w-4xl mx-auto">
-                
-				<h4 class="text-6xl font-medium">I Love You Virus</h4>
-                    <div class="flex items-center space-x-4 mt-4 justify-center">
-                        <a href="">Overview </a>
-                        <a href="">Method of Attack</a>
-                        <a href="">Impact and Consequences</a>
-                    </div>
-			</div>
+        
+
+            <div class="relative max-w-6xl mx-auto mt-20 text-left z-10">
+                <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
+                    <a class="text-sm" href="../famous-cyber-attacks.html">Famous Cyber Attacks</a>
+                    <span class="text-gray-300 text-sm">/</span>
+                    <a href="#" class="text-sm">I Love You Virus</a>
+                </div>
+                <h4 class="text-6xl font-medium text-center mt-20">I Love You Virus</h4>
+                <div class="flex items-center space-x-4 mt-4 justify-center">
+                    <a href="#overview">Overview </a>
+                    <a href="#method-of-attack">Method of Attack</a>
+                    <a href="#impact-and-consequences">Impact and Consequences</a>
+                </div>
+            </div>
 
 
 			
@@ -307,16 +313,16 @@
 		<div class="bg-gradient-to-b from-black to-[#141528] text-justify">
 			<div class="max-w-6xl mx-auto px-6 py-32 space-y-4">
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
+                    <h4 id="overview" class="font-medium text-2xl text-[#E2C8F1]">Overview</h4>
                     <p>The ILOVEYOU virus was a computer worm that began spreading in May 2000. Originating from the Philippines, it was distributed through email with the subject "ILOVEYOU" and an attachment that appeared to be a love letter. Once opened, the worm overwrote important files and automatically sent itself to everyone in the victim’s email contacts. It spread rapidly across the world within hours, affecting millions of computers. The worm caused approximately $10 billion in damages globally. It prompted a global conversation about email security and safe computing practices. The creators were not prosecuted due to the lack of applicable laws in the Philippines at that time.
                     </p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
+                    <h4 id="method-of-attack" class="font-medium text-2xl text-[#E2C8F1]">Method of Attack</h4>
                     <p>The worm was disguised as a .TXT file, but it was actually a malicious Visual Basic Script (.VBS) file. When the attachment was opened, it overwrite files, stole passwords, and spread by emailing itself to all contacts. The attack relied heavily on human error, exploiting curiosity and trust. It did not need advanced exploits or vulnerabilities, only user interaction. This simplicity made it one of the most devastating social engineering attacks ever.</p>
                 </div>
                 <div class="space-y-4">
-                    <h4 class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
+                    <h4 id="impact-and-consequences" class="font-medium text-2xl text-[#E2C8F1]">Impact and Consequences</h4>
                     <div class="grid grid-cols-2 gap-4">
                         <div class="p-5 bg-[#141528] border border-indigo-900 rounded space-y-2 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="font-medium text-lg">Impact 1</h6>
