--- a/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
+++ b/concept-of-cybersecurity/history-of-computer-vulnerabilities.html
@@ -60,7 +60,7 @@
                     </h4>
 
                     <div class="grid grid-cols-1 gap-4">
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">Phishing</h6>
                             <div>
                                 <p>Phishing attacks began in the mid-1990s, with attackers impersonating AOL employees to steal user credentials via email (Fette, 2020). These early phishing attacks exploited social engineering tactics, tricking users into entering personal information on fraudulent websites (Fette, 2020). AOL introduced anti-phishing measures in 1995 to counter the rising threat, although phishing attacks continue to evolve (Fette, 2020).</p>
@@ -70,7 +70,7 @@
                             </div>
                         </div>
 
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">Ransomware</h6>
                             <div>
                                 <p>Ransomware first emerged in 1989 with the AIDS Trojan, also known as PS Cyborg, which encrypted files on infected systems and demanded payment to a P.O. box (Popp, 1989). The AIDS Trojan, distributed on floppy disks at a World Health Organization conference, was one of the first known attempts to extort victims through ransomware (Popp, 1989). Since then, ransomware has evolved significantly, with more sophisticated versions using encryption to lock files and demand cryptocurrency payments (Varonis, 2021).</p>
@@ -80,7 +80,7 @@
                             </div>
                         </div>
 
-                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 transform transition-all duration-300 hover:scale-105">
+                        <div class="border border-indigo-900 bg- p-4 bg-[#141528] rounded space-y-3 hover:bg-[#1D1F3E] ease duration-300">
                             <h6 class="text-2xl font-medium text-[#E2C8F1]">SQL Injection</h6>
                             <div>
                                 <p>SQL Injection attacks were first recognized in the late 1990s as a significant web application security vulnerability (Halfond, 2006). These attacks involve injecting malicious SQL queries into input fields to manipulate or extract data from databases (Halfond, 2006). Despite the recognition of the vulnerability, SQL Injection remains one of the most prevalent attacks in web application security (OWASP, 2021).</p>
