fixed unable to click some buttons on top nav

--- a/concept-of-cybersecurity/evolution-of-cyberthreats.html
+++ b/concept-of-cybersecurity/evolution-of-cyberthreats.html
@@ -316,7 +316,7 @@
             </nav>
 
 			<div class="absolute inset-0 bg-gradient-to-b from-transparent to-black"></div>
-            <div class="relative max-w-6xl mx-auto text-left z-10">
+            <div class="relative max-w-6xl mx-auto text-left z-9 mt-24">
                 <div class="flex items-center text-gray-300 md:px-2 px-4 space-x-2">
                     <a class="text-sm" href="../concepts-of-cybersecurity.html">Concepts of Cybersecurity</a>
                     <span class="text-gray-300 text-sm">/</span>
